Added A nav bar with login page

--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-5 ">
-  <h2 class="d-flex justify-content-center">Register for Pack N Pay online</h2>
+  <h2 class="d-flex justify-content-center">Welcome to Pack N Pay online</h2>
   <h6 class="d-flex justify-content-center">Sign up in seconds to start shopping online, and get groceries and more delivered to your door</h6>
   <hr>
   
